# is27

./: 4.cpp  CMakeLists.txt  MS.cpp  Puhov_Create.cpp  header.h  main.cpp  manin.cpp  perevezencev.cpp  readme.md  sharov.cpp  svyatov.cpp  zhdanov.cpp
include/: header.h
is27/: prog.cpp  readme.md
lib/: Puhov_Create.cpp  galanin.cpp  manin.cpp  perevezencev.cpp  peshehonov.cpp
src/: MS.cpp  averyanova.cpp  main.cpp  peshehonov.cpp  sharov.cpp
